--- a/style.css
+++ b/style.css
@@ -161,3 +161,23 @@ h2 {
 .my-float {
   margin-top: 16px;
 }
+
+
+
+
+
+/*media*/
+.image2 {
+  display: none;
+}
+
+@media only screen and (max-width: 500px) {
+  .image1 {
+    display: none;
+  }
+
+  .image2 {
+    display: block;
+  }
+}
+
